# simple_bevy

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  LEARN.md  README.md  start-test.ps1
.claude/: settings.local.json
client/: Cargo.toml
client/src/: login.rs  main.rs  render.rs  scoreboard.rs
docs/superpowers/plans/: 2026-04-30-pixel-retheme-plan.md
docs/superpowers/specs/: 2026-04-30-pixel-retheme-design.md
examples/: finance.rs  server.rs  simple_finance.rs  single.rs
lab/: Cargo.toml
lab/examples/: client.rs  finance.rs  simple_finance.rs  single.rs
lab/src/: main.rs
platform/: Cargo.toml  api_keys.json  players.json
platform/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
rest/: test.rest
server/: Cargo.toml
server/src/: auth.rs  bullet.rs  combat.rs  main.rs  render.rs  scoreboard.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: client.rs  lib.rs  main.rs  server.rs  shared.rs
src/client/: login.rs  mod.rs  render.rs  scoreboard.rs
src/server/: auth.rs  bullet.rs  combat.rs  mod.rs  render.rs  scoreboard.rs
trading.db/: db  snap.0000000000351974
