[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bevy = "0.18.1"
bevy_renet = "4.0.1"
bevy_replicon = "0.39.4"
bevy_replicon_renet = "0.15.0"
bincode = "1.3.3"
rand = "0.10.1"
serde = { version = "1", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1", features = ["full"] }
