[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
bevy = { workspace = true }
bevy_renet = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy_ui_widgets = "0.18.1"
