[package]
name = "lab"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bevy = { workspace = true }
bevy_renet = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bincode = "1.3.3"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = "0.34.7"
tokio = { version = "1", features = ["full"] }
