[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
bevy = "0.18.1"
bevy_renet = "4.0.1"
bevy_replicon = "0.39.4"
bevy_replicon_renet = "0.15.0"
rand = "0.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
