[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
bevy = { workspace = true }
bevy_renet = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"
